@@ -1,0 +1,34 @@
+<% if @project.deployments.empty? %>
+  <br/>
+    This project was never deployed. 
+  <br/>
+<% else %>
+  <table class="sortable">
+    <tr>
+      <th width="1%">Stage</th>
+      <th width="1%">Task</th>
+      <th width="1%">Started<br />Completed</th>
+      <th width="94%">Comment</th>
+      <th width="1%">Revision</th>
+      <th width="1%">User</th>
+      <th width="1%">Status</th>
+    </tr>
+  <% for deployment in @project.recent_deployments %>
+    <tr class="<%= cycle :even, :odd, :name => 'deployments' %>">
+      <td><%= link_to h(deployment.stage.name), project_stage_path(current_project, deployment.stage) %></td>
+      <td><%= link_to h(deployment.task), project_stage_deployment_path(current_project, deployment.stage, deployment) %></td>
+      <td nowrap><%=h deployment.created_at.to_s(:log)  %><br /><%=h deployment.completed_at.to_s(:log) rescue '&nbsp;' %></td>
+      <td title="<%=h deployment.description%>"><%=h truncate(deployment.description, 37) %></td>
+      <td title="<%=h deployment.revision %>"><%=h truncate(deployment.revision, 10) %></td>
+      <td><%= user_info(deployment.user) rescue '' %></td>
+      <td style="padding:3px 0px 0px 0px;" valign="middle" align="center"><%= image_tag('peritor_theme/'+deployment.status_image, :title => deployment.status)%></td>
+      <td>
+        <% if deployment.completed? %>
+          <%= link_to "Repeat", new_project_stage_deployment_path(current_project, deployment.stage) + '?repeat=' + h(deployment.id)  %>
+        <% end %>
+      </td>
+    </tr>
+  <% end %>
+  </table>  
+<% end %>
+<br />
